syntax = "proto3";

package auth;

option go_package = "/auth";

service AuthService{
    // Profile Management
    rpc GetProfile(ById) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (InfoResponse);
    rpc DeleteProfile(ById) returns (InfoResponse);

    // Admin Operations
    rpc ListAllProfiles(ById) returns (GetAllProfilesResponse);
    rpc DeleteProfileByAdmin(DeleteProfileByAdminReq) returns (InfoResponse);

    // Users and Couriers
    rpc RegisterUser(Register) returns (InfoResponse);
    rpc LoginUser(Login) returns (TokenResponse);
    rpc RegisterCourier(Register) returns (InfoResponse);
    rpc LoginCourier(Login) returns (TokenResponse);

    // Both
    rpc VerifyEmail(VerifyEmailRequest) returns (InfoResponse);
    rpc RefreshToken(ById) returns(TokenResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (InfoResponse);
    rpc ForgetPassword(ForgetPasswordRequest) returns (InfoResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (InfoResponse);
    rpc ChangeEmail(ChangeEmailRequest) returns (InfoResponse);
    rpc VerifyNewEmail(VerifyNewEmailRequest) returns (TokenResponse);
}

message User{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    string gender = 5;
    string email = 6;
    string password = 7;
    string role = 8;
}

// =======================================
message ById{
    string id = 1;
}

message GetProfileResponse{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    string gender = 5;
    string email = 6;
    string role = 7;
}

message UpdateProfileRequest{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    string gender = 5;
}

message InfoResponse{
    string Message = 1;
    bool Success = 2;
}

// =======================================
message GetAllProfilesResponse{
    repeated GetProfileResponse result = 1;
}

message DeleteProfileByAdminReq{
    string admin_id = 1;
    string user_id = 2;
}

// =======================================
message Register{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    string gender = 5;
    string email = 6;
    string password = 7;
    string role = 8;
}

message Login{
    string email = 1;
    string password = 2;
}

message TokenResponse{
    string id = 1;
    string access_token = 2;
    string expires_at = 3;
}

// =======================================
message VerifyEmailRequest{
    string email = 1;
    string code = 2;
}

message ChangePasswordRequest{
    string current_password = 1;
    string new_password = 2;
}

message ForgetPasswordRequest{
    string email = 1;
}

message ResetPasswordRequest{
    string id = 1;
    string email = 2;
    string code = 3;
    string new_password = 4;
}

message ChangeEmailRequest{
    string current_email = 1;
    string new_email = 2;
}

message VerifyNewEmailRequest{
    string id = 1;
    string new_email = 2;
    string code = 3;
}